--- a/remote/common/Cargo.toml
+++ b/remote/common/Cargo.toml
@@ -21,7 +21,7 @@ prost-types = { workspace = true }
 rustls-native-certs = { workspace = true }
 serde = { workspace = true, features = ["derive", "rc"] }
 thiserror = { workspace = true }
-tokio-rustls = { workspace = true, optional = true }
+rustls = { workspace = true }
 tonic = { workspace = true }
 tracing = { workspace = true }
 tracing-subscriber = { workspace = true, features = ["env-filter"] }
@@ -37,7 +37,7 @@ tonic-build = { workspace = true, features = ["prost"] }
 [features]
 default = []
 client = []
-server = ["dep:axum-server", "dep:tokio-rustls"]
+server = ["dep:axum-server"]
 
 [lints]
 workspace = true
