--- a/remote/client/Cargo.toml
+++ b/remote/client/Cargo.toml
@@ -18,6 +18,7 @@ hostname = { workspace = true }
 mime = { workspace = true }
 nameth = { workspace = true }
 openssl = { workspace = true }
+pin-project = { workspace = true }
 prost = { workspace = true }
 prost-types = { workspace = true }
 reqwest = { workspace = true }
