--- a/remote/client/Cargo.toml
+++ b/remote/client/Cargo.toml
@@ -13,16 +13,13 @@ description = { workspace = true }
 trz-gateway-common = { workspace = true }
 
 futures = { workspace = true }
-http = { workspace = true }
 hostname = { workspace = true }
 mime = { workspace = true }
 nameth = { workspace = true }
 openssl = { workspace = true }
 pin-project = { workspace = true }
-prost = { workspace = true }
 prost-types = { workspace = true }
 reqwest = { workspace = true }
-rustls = { workspace = true }
 serde = { workspace = true, features = ["derive", "rc"] }
 serde_json = { workspace = true }
 thiserror = { workspace = true }
@@ -32,10 +29,9 @@ tokio-tungstenite = { workspace = true, features = ["rustls-tls-native-roots"] }
 tokio-util = { workspace = true }
 tonic = { workspace = true }
 tracing = { workspace = true }
-tracing-subscriber = { workspace = true, features = ["env-filter"] }
 uuid = { workspace = true }
 
 [dev-dependencies]
 
-# [lints]
-# workspace = true
+[lints]
+workspace = true
