--- a/Cargo.toml
+++ b/Cargo.toml
@@ -104,7 +104,7 @@ tonic-build = { version = "0.12.3" }
 tower = { version = "0.5.2" }
 tower-http = { version = "0.6.2" }
 tracing = { version = "0.1.41" }
-tracing-futures = { version = "0.2.5" }
+tracing-futures = { version = "0.2.5", features = ["futures-03"] }
 tracing-subscriber = { version = "0.3.19" }
 tracing-subscriber-wasm = { version = "0.1.0" }
 uuid = { version = "1.13.1" }
