--- a/remote/client/Cargo.toml
+++ b/remote/client/Cargo.toml
@@ -29,6 +29,7 @@ tokio-tungstenite = { workspace = true, features = ["rustls-tls-native-roots"] }
 tokio-util = { workspace = true }
 tonic = { workspace = true }
 tracing = { workspace = true }
+tracing-futures = { workspace = true }
 uuid = { workspace = true }
 
 [dev-dependencies]
