--- a/remote/client/Cargo.toml
+++ b/remote/client/Cargo.toml
@@ -14,6 +14,7 @@ trz-gateway-common = { workspace = true }
 
 futures = { workspace = true }
 hostname = { workspace = true }
+http = { workspace = true }
 mime = { workspace = true }
 nameth = { workspace = true }
 openssl = { workspace = true }
