--- a/remote/common/Cargo.toml
+++ b/remote/common/Cargo.toml
@@ -25,6 +25,7 @@ tokio = { workspace = true }
 tonic = { workspace = true }
 tracing = { workspace = true }
 tracing-subscriber = { workspace = true, features = ["env-filter"] }
+uuid = { workspace = true }
 x509-parser = { workspace = true }
 
 [dev-dependencies]
