--- a/Cargo.toml
+++ b/Cargo.toml
@@ -67,9 +67,10 @@ deluxe = { version = "0.5.0" }
 futures = { version = "0.3.31" }
 hostname = { version = "0.4.0" }
 http = { version = "1.2.0" }
+humantime = { version = "2.1.0" }
 hyper-util = { version = "0.1.10" }
 include_directory = { version = "0.1.1" }
-libc = { version = "0.2.169" }
+libc = { version = "0.2.170" }
 mime = { version = "0.3.17" }
 mime_guess = { version = "2.0.5" }
 oid-registry = { version = "0.8.1" }
@@ -104,7 +105,7 @@ tonic-build = { version = "0.12.3" }
 tower = { version = "0.5.2" }
 tower-http = { version = "0.6.2" }
 tracing = { version = "0.1.41" }
-tracing-futures = { version = "0.2.5" }
+tracing-futures = { version = "0.2.5", features = ["futures-03"] }
 tracing-subscriber = { version = "0.3.19" }
 tracing-subscriber-wasm = { version = "0.1.0" }
 uuid = { version = "1.13.1" }
