--- a/remote/client/Cargo.toml
+++ b/remote/client/Cargo.toml
@@ -14,6 +14,8 @@ trz-gateway-common = { workspace = true }
 
 futures = { workspace = true }
 hostname = { workspace = true }
+http = { workspace = true }
+humantime = { workspace = true }
 mime = { workspace = true }
 nameth = { workspace = true }
 openssl = { workspace = true }
@@ -29,6 +31,7 @@ tokio-tungstenite = { workspace = true, features = ["rustls-tls-native-roots"] }
 tokio-util = { workspace = true }
 tonic = { workspace = true }
 tracing = { workspace = true }
+tracing-futures = { workspace = true }
 uuid = { workspace = true }
 
 [dev-dependencies]
