--- a/Cargo.toml
+++ b/Cargo.toml
@@ -45,14 +45,14 @@ incremental = true       # Incremental compilation.
 opt-level = "s"
 
 [workspace.dependencies]
-autoclone = { version = "0.1.4", path = "autoclone/autoclone" }
-nameth = { version = "0.1.4", path = "nameth/nameth" }
-nameth-macro = { version = "0.1.4", path = "nameth/nameth-macro" }
+autoclone = { version = "0.1.4", path = "utils/autoclone/autoclone" }
+nameth = { version = "0.1.4", path = "utils/nameth/nameth" }
+nameth-macro = { version = "0.1.4", path = "utils/nameth/nameth-macro" }
 terrazzo = { version = "0.1.4", path = "framework/terrazzo", default-features = false }
 terrazzo-build = { version = "0.1.4", path = "framework/build" }
 terrazzo-client = { version = "0.1.4", path = "framework/client" }
+terrazzo-fixture = { version = "0.1.4", path = "utils/fixture" }
 terrazzo-macro = { version = "0.1.4", path = "framework/macro" }
-terrazzo-fixture = { version = "0.1.4", path = "fixture" }
 trz-gateway-client = { version = "0.1.4", path = "remote/client" }
 trz-gateway-common = { version = "0.1.4", path = "remote/common" }
 trz-gateway-server = { version = "0.1.4", path = "remote/server" }
