--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,24 +1,24 @@
 [workspace]
 members = [
-    "autoclone/autoclone",
-    "autoclone/autoclone-tests",
     "demo",
     "framework/build",
     "framework/client",
     "framework/macro",
     "framework/terrazzo",
-    "nameth/nameth",
-    "nameth/nameth-macro",
-    "nameth/nameth-tests",
     "remote/client",
     "remote/common",
     "remote/server",
-    "testutils",
+    "utils/autoclone/autoclone-tests",
+    "utils/autoclone/autoclone",
+    "utils/fixture",
+    "utils/nameth/nameth-macro",
+    "utils/nameth/nameth-tests",
+    "utils/nameth/nameth",
 ]
 resolver = "2"
 
 [workspace.package]
-version = "0.1.3"
+version = "0.1.4"
 authors = ["Lamparo <LamparoS@Pavy.one>"]
 edition = "2024"
 repository = "https://github.com/Terrazzo-Web/Terrazzo"
@@ -45,17 +45,17 @@ incremental = true       # Incremental compilation.
 opt-level = "s"
 
 [workspace.dependencies]
-autoclone = { version = "0.1.3", path = "autoclone/autoclone" }
-nameth = { version = "0.1.3", path = "nameth/nameth" }
-nameth-macro = { version = "0.1.3", path = "nameth/nameth-macro" }
-terrazzo = { version = "0.1.3", path = "framework/terrazzo", default-features = false }
-terrazzo-build = { version = "0.1.3", path = "framework/build" }
-terrazzo-client = { version = "0.1.3", path = "framework/client" }
-terrazzo-macro = { version = "0.1.3", path = "framework/macro" }
-terrazzo-testutils = { path = "testutils" }
-trz-gateway-client = { path = "remote/client" }
-trz-gateway-common = { path = "remote/common" }
-trz-gateway-server = { path = "remote/server" }
+autoclone = { version = "0.1.4", path = "utils/autoclone/autoclone" }
+nameth = { version = "0.1.4", path = "utils/nameth/nameth" }
+nameth-macro = { version = "0.1.4", path = "utils/nameth/nameth-macro" }
+terrazzo = { version = "0.1.4", path = "framework/terrazzo", default-features = false }
+terrazzo-build = { version = "0.1.4", path = "framework/build" }
+terrazzo-client = { version = "0.1.4", path = "framework/client" }
+terrazzo-fixture = { version = "0.1.4", path = "utils/fixture" }
+terrazzo-macro = { version = "0.1.4", path = "framework/macro" }
+trz-gateway-client = { version = "0.1.4", path = "remote/client" }
+trz-gateway-common = { version = "0.1.4", path = "remote/common" }
+trz-gateway-server = { version = "0.1.4", path = "remote/server" }
 
 axum = { version = "0.8.1" }
 axum-server = { version = "0.7.1" }
