--- a/utils/fixture/Cargo.toml
+++ b/utils/fixture/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "terrazzo-testutils"
+name = "terrazzo-fixture"
 version = { workspace = true }
 authors = { workspace = true }
 edition = { workspace = true }
