--- a/Cargo.toml
+++ b/Cargo.toml
@@ -70,6 +70,7 @@ http = { version = "1.3.1" }
 humantime = { version = "2.2.0" }
 hyper-util = { version = "0.1.11" }
 include_directory = { version = "0.1.1" }
+instant-acme = { version = "0.7.2" }
 libc = { version = "0.2.172" }
 mime = { version = "0.3.17" }
 mime_guess = { version = "2.0.5" }
