--- a/remote/server/Cargo.toml
+++ b/remote/server/Cargo.toml
@@ -22,6 +22,7 @@ bytes = { workspace = true }
 dashmap = { workspace = true }
 futures = { workspace = true }
 hyper-util = { workspace = true, features = ["tokio"] }
+instant-acme = { workspace = true }
 nameth = { workspace = true }
 openssl = { workspace = true }
 pem = { workspace = true }
